<resources>
    <string name="app_name">Servisní knížka</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="refreshBtn">Refresh</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="garageHeading">Garáž</string>
    <string name="checkBtnText">Zobrazit prohlídku</string>
    <string name="stk_kontrola">STK kontrola</string>
    <string name="km">km</string>
    <string name="kmCheckHeadline">Doporučená prohlídka vozu za</string>
    <string name="oilCheckHeadline">Výměna oleje</string>
    <string name="historyBtnHeadline">SERVISNÍ KNÍŽKA</string>
    <string name="scoreText">ÚROVEŇ PÉČE O VŮZ</string>
    <string name="statsTotalKmHeadline">Celkově najeté kilometry</string>
    <string name="statsTotalCostsHeadline">Kč</string>
    <string name="statsTotalCostsTitle">Celkové náklady na údržbu</string>
    <string name="totalFixesHeadline">Celkový počet úkonů</string>
    <string name="statsTotalDaysHeadline">Doba existence servisní knížky</string>
    <string name="carCheckHeadline">Prohlídka vozu</string>
    <string name="errorsCountHeadline">Počet nálezů</string>
    <string name="fixPriceHeadline">Odhad ceny opravy</string>
    <string name="bookID">ID servisní knížky:</string>
    <string name="fixHistoryHeadline">Servisní knížka</string>
    <string name="fixCountHeadline">Počet úkonů</string>
    <string name="fixCostsHeadline">Celkové náklady</string>
    <string name="fixDetailHeadline">Detail úkonu</string>
    <string name="Login_headline1">Virtuální</string>
    <string name="Login_headline2">Servisní</string>
    <string name="Login_headline3">Knížka</string>
    <string name="login_btn">PŘIHLÁSIT SE POMOCÍ GOOGLE</string>
    <string name="loginFailureMsg">Přihlášení selhalo</string>
    <string name="newUserText">Značka vašeho vozidla</string>
    <string name="newUserText2">Škoda</string>
    <string name="newUserText3">Servisní knížce</string>
    <string name="newUserText4">Vítejte ve vaší nové</string>
    <string name="newUserText5">Model vašeho vozidla</string>
    <string name="newUserText6">Octavia</string>
    <string name="newUserText7">Řekněte nám něco</string>
    <string name="newUserText8">o vašem vozidle</string>
    <string name="newUserBtn">Pokračovat</string>
    <string name="newUserError">Prosím vyplňte údaje o voze</string>
    <string name="peepoHappy">peepoHappy</string>
    <string name="text">naplnit daty o voze...</string>
    <string name="text1">Servisní knížku</string>
    <string name="text2">A teď už jen vaší novou</string>
    <string name="btnText">Pokračovat do neaktivované knížky</string>
    <string name="btnText2">Přijít až po prohlídce</string>
    <string name="icon">icon</string>
</resources>