<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fixHistory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fixHistoryHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/fixHistoryHeadline"
            android:textColor="#000000"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.223"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fixCountHeadline"
            android:layout_width="107dp"
            android:layout_height="17dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/fixCountHeadline"
            android:textColor="#5E5E5E"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fixHistoryHeadline" />

        <TextView
            android:id="@+id/fixCount"
            android:layout_width="108dp"
            android:layout_height="32dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/poppins"
            android:text="5"
            android:textColor="#232323"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fixCountHeadline" />

        <TextView
            android:id="@+id/costsTotalHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="88dp"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/fixCostsHeadline"
            android:textColor="#5E5E5E"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fixHistoryHeadline" />

        <TextView
            android:id="@+id/fixCosts"
            android:layout_width="127dp"
            android:layout_height="34dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/poppins"
            android:text="20144"
            android:textColor="#232323"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/costsTotalHeadline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>